[gd_scene load_steps=3 format=2]

[ext_resource path="res://Styles/Main.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/JoinHost.gd" type="Script" id=2]

[node name="JoinHost" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -301.0
margin_right = 518.0
margin_bottom = 299.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -84.5
margin_right = 105.0
margin_bottom = 84.5

[node name="Data" type="GridContainer" parent="Panel"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -48.5
margin_right = 76.0
margin_bottom = 7.5
columns = 2

[node name="IpLabel" type="Label" parent="Panel/Data"]
margin_top = 3.0
margin_right = 37.0
margin_bottom = 23.0
text = "IP:"

[node name="Ip" type="LineEdit" parent="Panel/Data"]
margin_left = 41.0
margin_right = 162.5
margin_bottom = 26.25
text = "127.0.0.1"
expand_to_text_length = true

[node name="PortLabel" type="Label" parent="Panel/Data"]
margin_top = 33.0
margin_right = 37.0
margin_bottom = 53.0
text = "Port:"

[node name="Port" type="LineEdit" parent="Panel/Data"]
margin_left = 41.0
margin_top = 30.0
margin_right = 162.5
margin_bottom = 56.25
text = "10567"

[node name="Join" type="Button" parent="Panel"]
margin_left = 20.0
margin_top = 120.0
margin_right = 69.0
margin_bottom = 155.0
text = "Join"

[node name="Host" type="Button" parent="Panel"]
margin_left = 139.0
margin_top = 120.0
margin_right = 192.0
margin_bottom = 155.0
size_flags_horizontal = 9
text = "Host"

[node name="Status" type="Label" parent="Panel"]
margin_left = 19.0
margin_top = 96.0
margin_right = 189.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="."]
margin_top = 90.0
margin_right = 1024.0
margin_bottom = 110.0
text = "Host or join server"
align = 1

[node name="ConnectionTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="pressed" from="Panel/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Panel/Host" to="." method="_on_Host_pressed"]
[connection signal="timeout" from="ConnectionTimer" to="." method="_on_connection_failed"]
